This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

02-Mar-2002 (Lars Duening)  (3.3.408)
  - (configure) It would be useful if I actually updated the configure
       script.

02-Mar-2002 (Lars Duening)  (3.3.407)
  - (ptmalloc.c) Added some documentation and error checks (thanks, Gawain).
  - (configure, smalloc) Removed the CHECK_SMALLOC_TOTAL debugging code -
       the problem is fixed.
  - (configure, smalloc) New diagnostic option MALLOC_SBRK_TRACE to enable
       a log of all esbrk() calls and the stats of the allocation requests
       causing it. This formalizes the 'DEBUG: MEM ' diagnostics added
       in 3.3.399, though the particular string 'DEBUG: MEM ' has been
       dropped from the output.

02-Mar-2002 (Lars Duening)  (3.3.406)
  - (gcollect.c) During the 'clear' phase of the GC, struct member elements
       weren't marked as cleared, which prevented proper counting in the
       'count' phase and caused the referenced memory blocks being deallocated
       prematurely in the 'sweep' phase (reported by Bardioc).
  - (mapping.c) Fixed a memory leak in efun m_add().

01-Mar-2002 (Lars Duening)  (3.3.405)
  - (func_spec, object) New efun variable_exists() and
       variable_list().

27-Feb-2002 (Lars Duening)  (3.3.404)
  - (interpret.c) Improved the error message for when 'mapping[a,b]' is used
       with incorrect types at runtime.

27-Feb-2002 (Lars Duening)  (3.3.403)
  - (gcollect.c, swap.c, mempools) During a the GC a new swap membuffer could
       be allocated and then marked 'unreferenced' by the GC, subsequently
       causing memory corruption as the swapper continued to use it. The
       memory buffers are now held on to during the GC and only freed
       afterwards.

24-Feb-2002 (Lars Duening)  (3.3.402)
  - (strfuns.c) Made the strbuf allocations resilient against out-of-memory
       conditions.