@@ -3231,7 +3231,9 @@ check_valid_path (string_t *path, object_t *caller, string_t* call_fun, Bool wri
     }
 
     if (legal_path(get_txt(path)))
+    {
         return path;
+    }
 
     /* Push the path onto the VM stack so that error() can free it */
     push_string(inter_sp, path);
